# ProjectVictor

./: CMakeLists.txt  LICENSE  README.md
include/: u_very_long.hpp
src/: add_sub.cpp  bit_man.cpp  double.cpp  eql.cpp  mul_div_mod.cpp
tests/: test_add_sub.cpp  test_bit_man.cpp  test_eql.cpp  test_mul_div_mod.cpp
